Upload proper image resources

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <div class="header">
         <div class="header-top-half">
           <div class="header-top-left">
-            <label for="search"><img src="./assets/search.svg" alt=""></label>
+            <label for="search"><img src="./images/search.svg" alt=""></label>
             <input type="text" id="search" name="search">
           </div>
           <div class="header-top-right">
-            <span><img src="./assets/bell.svg" alt=""></span>
-            <img class="cat-image" id="small-active-user-image" src="./assets/yuumi.jpg" alt="">
+            <span><img src="./images/bell.svg" alt=""></span>
+            <img class="cat-image" id="small-active-user-image" src="./images/yuumi.jpg" alt="">
             <span>Coding Cat</span>
           </div>
         </div>
         <div class="header-bottom-half">
           <div class="header-bottom-left">
-            <img class="cat-image" id="big-active-user-image" src="./assets/yuumi.jpg" alt="">
+            <img class="cat-image" id="big-active-user-image" src="./images/yuumi.jpg" alt="">
             <div class="active-user-text">
               <p>Hi there,</p>
               <h2>Coding Cat (@codecat)</h2>
@@ -38,18 +38,18 @@
     </div>
     <div class="sidebar">
       <ul>
-        <li><a href="#"><span><img id="yarn" src="./assets/yarn.png" alt=""></span> <h1> Cat Devs</h1></a></li>
-        <li><a href="#"><span><img src="./assets/home.svg" alt=""></span> Home</a></li>
-        <li><a href="#"><span><img src="./assets/user.svg" alt=""></span>Profile</a></li>
-        <li><a href="#"><span><img src="./assets/message-circle.svg" alt=""></span>Messages</a></li>
-        <li><a href="#"><span><img src="./assets/clock.svg" alt=""></span>History</a></li>
-        <li><a href="#"><span><img src="./assets/check-circle.svg" alt=""></span>Tasks</a></li>
-        <li><a href="#"><span><img src="./assets/users.svg" alt=""></span>Communities</a></li>
+        <li><a href="#"><span><img id="yarn" src="./images/yarn.png" alt=""></span> <h1> Cat Devs</h1></a></li>
+        <li><a href="#"><span><img src="./images/home.svg" alt=""></span> Home</a></li>
+        <li><a href="#"><span><img src="./images/user.svg" alt=""></span>Profile</a></li>
+        <li><a href="#"><span><img src="./images/message-circle.svg" alt=""></span>Messages</a></li>
+        <li><a href="#"><span><img src="./images/clock.svg" alt=""></span>History</a></li>
+        <li><a href="#"><span><img src="./images/check-circle.svg" alt=""></span>Tasks</a></li>
+        <li><a href="#"><span><img src="./images/users.svg" alt=""></span>Communities</a></li>
       </ul>
       <ul>
-        <li><a href="#"><span><img src="./assets/settings.svg" alt=""></span>Settings</a></li>
-        <li><a href="#"><span><img src="./assets/help-circle.svg" alt=""></span>Support</a></li>
-        <li><a href="#"><span><img src="./assets/shield.svg" alt=""></span>Privacy</a></li>
+        <li><a href="#"><span><img src="./images/settings.svg" alt=""></span>Settings</a></li>
+        <li><a href="#"><span><img src="./images/help-circle.svg" alt=""></span>Support</a></li>
+        <li><a href="#"><span><img src="./images/shield.svg" alt=""></span>Privacy</a></li>
       </ul>
     </div>
     <div class="main-content">
@@ -62,9 +62,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -73,9 +73,9 @@
             <p>Ipsa alias omnis iste magnam dicta dolorem incidunt itaque facilis nemo aperiam. Reprehenderit porro eos dignissimos beatae et voluptatem? Asperiores, sed praesentium!</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -84,9 +84,9 @@
             <p>Risus commodo viverra maecenas accumsan lacus vel. Nunc eget lorem dolor sed viverra ipsum nunc aliquet bibendum. Nec sagittis aliquam malesuada bibendum arcu vitae elementum.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -95,9 +95,9 @@
             <p>Amet purus gravida quis blandit turpis cursus. Enim facilisis gravida neque convallis a cras semper. Dapibus ultrices in iaculis nunc sed augue.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -106,9 +106,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -117,9 +117,9 @@
             <p>Turpis egestas integer eget aliquet nibh praesent tristique magna. Neque laoreet suspendisse interdum consectetur libero. Etiam erat velit scelerisque in dictum non consectetur a. Amet facilisis magna etiam tempor orci. Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -128,9 +128,9 @@
             <p>Turpis egestas integer eget aliquet nibh praesent tristique magna. Neque laoreet suspendisse interdum consectetur libero. Etiam erat velit scelerisque in dictum non consectetur a.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -139,9 +139,9 @@
             <p>Ullamcorper morbi tincidunt ornare massa eget egestas purus. Dis parturient montes nascetur ridiculus. Euismod quis viverra nibh cras pulvinar mattis. Mattis rhoncus urna neque viverra justo nec. Morbi leo urna molestie at elementum eu. Tincidunt praesent semper feugiat nibh sed pulvinar.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -150,9 +150,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -161,9 +161,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -172,9 +172,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
         <div class="project">
@@ -183,9 +183,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="project-icons">
-            <span><img src="./assets/star.svg" alt=""></span>
-            <span><img src="./assets/eye.svg" alt=""></span>
-            <span><img src="./assets/share-2.svg" alt=""></span>
+            <span><img src="./images/star.svg" alt=""></span>
+            <span><img src="./images/eye.svg" alt=""></span>
+            <span><img src="./images/share-2.svg" alt=""></span>
           </div>
         </div>
       </div>
@@ -209,28 +209,28 @@
         </div>
         <div class="trending">
           <div class="user">
-            <img src="./assets/grumpy cat.jpg" class="user-image" alt="">
+            <img src="./images/grumpy cat.jpg" class="user-image" alt="">
             <div class="user-text">
               <h5 class="user-text">@grumpy-cat</h5>
               <p class="user-text">Not Amused</p>
             </div>
           </div>
           <div class="user">
-            <img src="./assets/keyboard cat.jpg" class="user-image" alt="">
+            <img src="./images/keyboard cat.jpg" class="user-image" alt="">
             <div class="user-text">
               <h5 class="user-text">@keyboard-cat</h5>
               <p class="user-text">A True Musician</p>
             </div>
           </div>
           <div class="user">
-            <img src="./assets/maru.jpg" class="user-image" alt="">
+            <img src="./images/maru.jpg" class="user-image" alt="">
             <div class="user-text">
               <h5 class="user-text">@maru</h5>
               <p class="user-text">Box Lover</p>
             </div>
           </div>
           <div class="user">
-            <img src="./assets/lil bub.jpg" class="user-image" alt="">
+            <img src="./images/lil bub.jpg" class="user-image" alt="">
             <div class="user-text">
               <h5 class="user-text">@lil-bub</h5>
               <p class="user-text">Very Surprised</p>
